--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -19,6 +19,7 @@ jobs:
       - name: Checkout source
         uses: actions/checkout@v4
 
+      # --- SONARQUBE SCAN ---
       - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
@@ -30,7 +31,7 @@ jobs:
         with:
           node-version: '21'
 
-      - name: Add SonarScanner
+      - name: Add SonarScanner to PATH
         run: echo "/opt/sonar-scanner/bin" >> $GITHUB_PATH
 
       - name: Run SonarQube Analysis
@@ -42,32 +43,11 @@ jobs:
             -Dsonar.host.url=${{ secrets.SONAR_URL }} \
             -Dsonar.login=${{ secrets.SONAR_TOKEN }}
 
-      - name: Download SonarQube Issues
+      - name: Download SonarQube Issues Report
         run: |
           curl -s -u "${{ secrets.SONAR_TOKEN }}:" \
             "${{ secrets.SONAR_URL }}/api/issues/search?componentKeys=${{ env.SONAR_PROJECT_KEY }}&resolved=false" \
             -o sonarqube-report.json
-
-      - name: Run Docker Build (for Trivy image)
-        run: docker build -t security-scan:${{ env.IMAGE_TAG }} .
-
-      - name: Run Trivy Scan
-        run: |
-          docker run --rm \
-            -v /var/run/docker.sock:/var/run/docker.sock \
-            -v $HOME/.trivy-cache:/root/.cache/ \
-            security-scan:${{ env.IMAGE_TAG }} \
-            trivy image --format json --output trivy-report.json security-scan:${{ env.IMAGE_TAG }}
-
-      - name: Upload Trivy Report to DefectDojo
-        run: |
-          curl -X POST "${{ secrets.DEFECTDOJO_URL }}/api/v2/import-scan/" \
-            -H "Authorization: Token ${{ secrets.DEFECTDOJO_API_TOKEN }}" \
-            -F "scan_type=Trivy Scan" \
-            -F "engagement=${{ env.DEFECTDOJO_ENGAGEMENT_ID }}" \
-            -F "file=@trivy-report.json" \
-            -F "active=true" \
-            -F "verified=true"
 
       - name: Upload SonarQube Report to DefectDojo
         run: |
@@ -79,10 +59,34 @@ jobs:
             -F "active=true" \
             -F "verified=true"
 
-      - name: Archive Scan Reports
+      # --- TRIVY SCAN ---
+      - name: Build Docker Image for Trivy Scan
+        run: docker build -t security-scan:${{ env.IMAGE_TAG }} .
+
+      - name: Run Trivy Scan on Docker Image
+        run: |
+          docker run --rm \
+            -v /var/run/docker.sock:/var/run/docker.sock \
+            -v $HOME/.trivy-cache:/root/.cache/ \
+            -v ${{ github.workspace }}:/root/scan \
+            aquasec/trivy:latest \
+            image --format json --output /root/scan/trivy-report.json security-scan:${{ env.IMAGE_TAG }}
+
+      - name: Upload Trivy Report to DefectDojo
+        run: |
+          curl -X POST "${{ secrets.DEFECTDOJO_URL }}/api/v2/import-scan/" \
+            -H "Authorization: Token ${{ secrets.DEFECTDOJO_API_TOKEN }}" \
+            -F "scan_type=Trivy Scan" \
+            -F "engagement=${{ env.DEFECTDOJO_ENGAGEMENT_ID }}" \
+            -F "file=@trivy-report.json" \
+            -F "active=true" \
+            -F "verified=true"
+
+      # --- ARCHIVE REPORTS
+      - name: Archive Reports as Artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: security-reports
+          name: security-scan-reports
           path: |
-            trivy-report.json
             sonarqube-report.json
+            trivy-report.json
