--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -1,4 +1,4 @@
-name: Security Scan Only (SonarQube + Trivy)
+name: SonarQube Scan
 
 on:
   push:
@@ -6,47 +6,61 @@ on:
   workflow_dispatch:
 
 env:
-  IMAGE_NAME: narsi421/juice-shop
   SONAR_PROJECT_KEY: juice-shop
-  SONAR_PROJECT_NAME: JuiceShop
   DEFECTDOJO_ENGAGEMENT_ID: 1
 
 jobs:
-  security-scan:
+  sonarqube-scan:
     runs-on: self-hosted
 
     steps:
-      - name: Checkout Source
+      - name: Checkout source
         uses: actions/checkout@v4
 
-      - name: Set up JDK 21
+      - name: Set up Java
         uses: actions/setup-java@v4
         with:
           java-version: '21'
           distribution: 'temurin'
 
-      - name: Set up Node.js 21
-        uses: actions/setup-node@v4
-        with:
-          node-version: '21'
-
       - name: Add SonarScanner to PATH
         run: echo "/opt/sonar-scanner/bin" >> $GITHUB_PATH
 
-      - name: SonarQube Analysis
+      - name: Run SonarQube Analysis
         run: |
           sonar-scanner \
             -Dsonar.projectKey=${{ env.SONAR_PROJECT_KEY }} \
-            -Dsonar.projectName=${{ env.SONAR_PROJECT_NAME }} \
             -Dsonar.sources=. \
             -Dsonar.host.url=${{ secrets.SONAR_URL }} \
             -Dsonar.login=${{ secrets.SONAR_TOKEN }}
 
-      - name: Download SonarQube Report
+      - name: Install Python Requests
+        run: pip install requests
+
+      - name: Download SonarQube Issues (Paginated)
         run: |
-          curl -u ${{ secrets.SONAR_TOKEN }}: \
-            "${{ secrets.SONAR_URL }}/api/issues/search?componentKeys=${{ env.SONAR_PROJECT_KEY }}&resolved=false" \
-            -o sonarqube-report.json
+          cat <<EOF > sonarqube_fetch.py
+          import requests, json
+
+          sonar_url = "${{ secrets.SONAR_URL }}"
+          project_key = "${{ env.SONAR_PROJECT_KEY }}"
+          token = "${{ secrets.SONAR_TOKEN }}"
+          headers = {"Authorization": f"Bearer {token}"}
+
+          all_issues, page, page_size = [], 1, 500
+          while True:
+              url = f"{sonar_url}/api/issues/search?projects={project_key}&p={page}&ps={page_size}"
+              res = requests.get(url, headers=headers)
+              data = res.json()
+              all_issues += data.get("issues", [])
+              if page * page_size >= data.get("total", 0): break
+              page += 1
+
+          with open("sonarqube-report.json", "w") as f:
+              json.dump({"issues": all_issues}, f, indent=2)
+          EOF
+
+          python sonarqube_fetch.py
 
       - name: Upload SonarQube Report to DefectDojo
         run: |
@@ -58,34 +72,8 @@ jobs:
             -F "active=true" \
             -F "verified=true"
 
-      - name: Docker Build (for Trivy scan)
-        run: docker build -t $IMAGE_NAME:${{ github.run_number }} .
-
-      - name: Trivy Scan (Docker Image)
-        run: |
-          docker run --rm \
-            -v /var/run/docker.sock:/var/run/docker.sock \
-            -v $HOME/.trivy-cache:/root/.cache/ \
-            -v ${{ github.workspace }}:/root/scan \
-            aquasec/trivy image \
-            --format json \
-            --output /root/scan/trivy-report.json \
-            $IMAGE_NAME:${{ github.run_number }}
-
-      - name: Upload Trivy Report to DefectDojo
-        run: |
-          curl -X POST "${{ secrets.DEFECTDOJO_URL }}/api/v2/import-scan/" \
-            -H "Authorization: Token ${{ secrets.DEFECTDOJO_API_TOKEN }}" \
-            -F "scan_type=Trivy Scan" \
-            -F "engagement=${{ env.DEFECTDOJO_ENGAGEMENT_ID }}" \
-            -F "file=@trivy-report.json" \
-            -F "active=true" \
-            -F "verified=true"
-
-      - name: Archive JSON Reports
+      - name: Archive Report
         uses: actions/upload-artifact@v4
         with:
-          name: security-scan-reports
-          path: |
-            trivy-report.json
-            sonarqube-report.json
+          name: sonarqube-report
+          path: sonarqube-report.json
