Update SonarQube to DefectDojo.yml

--- a/.github/workflows/SonarQube to DefectDojo.yml
+++ b/.github/workflows/SonarQube to DefectDojo.yml
@@ -15,6 +15,13 @@ jobs:
     runs-on: self-hosted
 
     steps:
+    - name: Clean Workspace (Pre-Job)
+      run: |
+        echo "=== Freeing Disk Space ==="
+        sudo rm -rf /opt/runner/_work/*
+        docker system prune -af || true
+        sudo journalctl --vacuum-size=100M
+
     - name: Checkout source
       uses: actions/checkout@v4
 
@@ -28,6 +35,7 @@ jobs:
       run: echo "/opt/sonar-scanner/bin" >> $GITHUB_PATH
 
     - name: SonarQube Analysis
+      timeout-minutes: 30
       run: |
         sonar-scanner \
           -Dsonar.projectKey=${{ env.SONAR_PROJECT_KEY }} \
@@ -40,42 +48,68 @@ jobs:
       run: |
         curl -u ${{ secrets.SONAR_TOKEN }}: \
           "${{ secrets.SONAR_URL }}/api/issues/search?componentKeys=${{ env.SONAR_PROJECT_KEY }}&resolved=false&ps=500" \
-          -o sonarqube-report.json
-        echo "SonarQube report downloaded with size: $(wc -c < sonarqube-report.json) bytes"
+          -o raw-sonarqube-report.json
+        echo "Raw report size: $(du -h raw-sonarqube-report.json | cut -f1)"
 
-    - name: Validate JSON file
+    - name: Transform Report for DefectDojo
       run: |
-        jq empty sonarqube-report.json
-        echo "JSON validation passed"
+        jq '{
+          findings: [.issues[] | {
+            title: .message,
+            severity: (if .severity == "BLOCKER" then "Critical"
+                     elif .severity == "CRITICAL" then "High"
+                     elif .severity == "MAJOR" then "Medium"
+                     elif .severity == "MINOR" then "Low"
+                     else "Info" end),
+            description: (.component + ": " + .message),
+            file_path: .component,
+            line: .textRange.startLine,
+            vulnerability_ids: [{"vulnerability_id": .rule}]
+          }]
+        }' raw-sonarqube-report.json > defectdojo-ready.json
+        
+        echo "Transformed report size: $(du -h defectdojo-ready.json | cut -f1)"
+        rm raw-sonarqube-report.json
 
-    - name: Upload SonarQube Report to DefectDojo
+    - name: Upload to DefectDojo (Retry Logic)
       run: |
-        echo "Attempting to upload to DefectDojo..."
-        response=$(curl -s -w "\n%{http_code}" -X POST \
-          "${{ secrets.DEFECTDOJO_URL }}/api/v2/import-scan/" \
-          -H "Authorization: Token ${{ secrets.DEFECTDOJO_API_TOKEN }}" \
-          -F "scan_type=SonarQube Scan" \
-          -F "engagement=${{ env.DEFECTDOJO_ENGAGEMENT_ID }}" \
-          -F "file=@sonarqube-report.json" \
-          -F "active=true" \
-          -F "verified=true")
-        
-        http_code=$(echo "$response" | tail -n1)
-        body=$(echo "$response" | sed '$d')
-        
-        echo "HTTP Status Code: $http_code"
-        echo "Response Body: $body"
-        
-        if [ "$http_code" -ge 200 ] && [ "$http_code" -lt 300 ]; then
-          echo "Upload successful"
-          exit 0
-        else
-          echo "Upload failed"
-          exit 1
-        fi
+        for attempt in {1..3}; do
+          echo "Attempt $attempt/3"
+          response=$(curl -vvv -s -w "\nHTTP_STATUS:%{http_code}" -X POST \
+            "${{ secrets.DEFECTDOJO_URL }}/api/v2/import-scan/" \
+            -H "Authorization: Token ${{ secrets.DEFECTDOJO_API_TOKEN }}" \
+            -F "scan_type=SonarQube" \
+            -F "engagement=${{ env.DEFECTDOJO_ENGAGEMENT_ID }}" \
+            -F "file=@defectdojo-ready.json" \
+            -F "close_old_findings=true" \
+            -F "verified=true")
+            
+          http_code=$(echo "$response" | grep 'HTTP_STATUS:' | cut -d':' -f2)
+          body=$(echo "$response" | sed '/HTTP_STATUS:/d')
+          
+          echo "Status: $http_code"
+          echo "Response: $body"
+          
+          if [ "$http_code" -eq 201 ]; then
+            echo "Upload succeeded"
+            exit 0
+          fi
+          
+          sleep $((attempt * 10))
+        done
+        exit 1
 
-    - name: Archive Report
+    - name: Clean Workspace (Post-Job)
+      if: always()
+      run: |
+        echo "=== Post-Job Cleanup ==="
+        rm -f defectdojo-ready.json sonarqube-report.json
+        docker system prune -f
+        sudo find /opt/runner/_work -type f -mtime +1 -delete
+
+    - name: Archive Results
       uses: actions/upload-artifact@v4
       with:
-        name: sonarqube-results
-        path: sonarqube-report.json
+        name: scan-results
+        path: defectdojo-ready.json
+        retention-days: 1
