--- a/.github/workflows/onlysonar.yml
+++ b/.github/workflows/onlysonar.yml
@@ -1,35 +1,51 @@
-name: SonarQube Results to DefectDojo
+name: SonarQube Native Scan to DefectDojo
 
 on:
   workflow_dispatch:
 
 env:
   SONAR_PROJECT_KEY: juice-shop
+  SONAR_PROJECT_NAME: JuiceShop
   DEFECTDOJO_ENGAGEMENT_ID: 1
 
 jobs:
-  sonar-to-dojo:
+  sonarq-scanner:
     runs-on: self-hosted
 
     steps:
-    - name: Download SonarQube Issues Report
-      run: |
-        curl -u ${{ secrets.SONAR_TOKEN }}: \
-          "${{ secrets.SONAR_URL }}/api/issues/search?componentKeys=${{ env.SONAR_PROJECT_KEY }}&resolved=false" \
-          -o sonarqube-report.json
+    - name: Checkout source
+      uses: actions/checkout@v4
 
-    - name: Upload to DefectDojo
+    - name: Set up JDK 21
+      uses: actions/setup-java@v4
+      with:
+        java-version: '21'
+        distribution: 'temurin'
+
+    - name: Add SonarScanner to PATH
+      run: echo "/opt/sonar-scanner/bin" >> $GITHUB_PATH
+
+    - name: Run SonarQube Native Scan
+      run: |
+        sonar-scanner \
+          -Dsonar.projectKey=${{ env.SONAR_PROJECT_KEY }} \
+          -Dsonar.projectName=${{ env.SONAR_PROJECT_NAME }} \
+          -Dsonar.sources=. \
+          -Dsonar.host.url=${{ secrets.SONAR_URL }} \
+          -Dsonar.login=${{ secrets.SONAR_TOKEN }}
+
+    - name: Upload SonarQube Report to DefectDojo
       run: |
         curl -X POST "${{ secrets.DEFECTDOJO_URL }}/api/v2/import-scan/" \
           -H "Authorization: Token ${{ secrets.DEFECTDOJO_API_TOKEN }}" \
           -F "scan_type=SonarQube Scan" \
           -F "engagement=${{ env.DEFECTDOJO_ENGAGEMENT_ID }}" \
-          -F "file=@sonarqube-report.json" \
+          -F "file=@.scannerwork/sonar-report.json" \
           -F "active=true" \
           -F "verified=true"
 
     - name: Archive SonarQube Report
       uses: actions/upload-artifact@v4
       with:
-        name: sonarqube-report
-        path: sonarqube-report.json
+        name: sonar-scan-results
+        path: .scannerwork/sonar-report.json
