--- a/.github/workflows/onlysonar.yml
+++ b/.github/workflows/onlysonar.yml
@@ -50,7 +50,7 @@ jobs:
 
     - name: Upload SonarQube Report to DefectDojo
       run: |
-        curl -X POST "${{ secrets.DOJO_URL }}/api/v2/import-scan/" \
+        curl -X POST "${{ secrets.DEFECTDOJO_URL }}/api/v2/import-scan/" \
           -H "Authorization: Token ${{ secrets.DOJO_API_TOKEN }}" \
           -F "scan_type=SonarQube Scan" \
           -F "engagement=${{ env.DEFECTDOJO_ENGAGEMENT_ID }}" \
