--- a/.github/workflows/onlysonar.yml
+++ b/.github/workflows/onlysonar.yml
@@ -42,25 +42,38 @@ jobs:
           -Dsonar.host.url=${{ secrets.SONAR_URL }} \
           -Dsonar.login=${{ secrets.SONAR_TOKEN }}
 
-    - name: Download SonarQube Report
+    - name: Download All SonarQube Issues (Paginated)
       run: |
-        curl -u ${{ secrets.SONAR_TOKEN }}: \
-          "${{ secrets.SONAR_URL }}/api/issues/search?componentKeys=${{ env.SONAR_PROJECT_KEY }}&resolved=false" \
-          -o sonarqube-report.json
+        mkdir -p sonarqube-pages
+        PAGE=1
+        PAGE_SIZE=100
+        while true; do
+          echo "Fetching SonarQube issues page $PAGE"
+          curl -s -u ${{ secrets.SONAR_TOKEN }}: \
+            "${{ secrets.SONAR_URL }}/api/issues/search?componentKeys=${{ env.SONAR_PROJECT_KEY }}&resolved=false&p=$PAGE&ps=$PAGE_SIZE" \
+            -o sonarqube-pages/issues-page-${PAGE}.json
 
-    - name: Upload SonarQube Report to DefectDojo
+          COUNT=$(jq '.issues | length' sonarqube-pages/issues-page-${PAGE}.json)
+          if [ "$COUNT" -lt "$PAGE_SIZE" ]; then
+            break
+          fi
+          PAGE=$((PAGE + 1))
+        done
+        zip -r sonar-issues.zip sonarqube-pages/
+
+    - name: Upload SonarQube Report (ZIP) to DefectDojo
       run: |
         curl -X POST "${{ secrets.DEFECTDOJO_URL }}/api/v2/import-scan/" \
           -H "Authorization: Token ${{ secrets.DEFECTDOJO_API_TOKEN }}" \
           -F "scan_type=SonarQube Scan" \
           -F "engagement=${{ env.DEFECTDOJO_ENGAGEMENT_ID }}" \
-          -F "file=@sonarqube-report.json" \
+          -F "file=@sonar-issues.zip" \
           -F "active=true" \
           -F "verified=true"
 
-    - name: Archive JSON Reports
+    - name: Archive SonarQube Reports
       uses: actions/upload-artifact@v4
       with:
-        name: scan-results
+        name: sonarqube-scan-pages
         path: |
-          sonarqube-report.json
+          sonar-issues.zip
