--- a/.github/workflows/DB.yml
+++ b/.github/workflows/DB.yml
@@ -87,8 +87,8 @@ jobs:
 
       - name: Upload Dependabot alerts to DefectDojo
         run: |
-          curl -X POST "${{ secrets.DEFECTDOJO_URL_NGROK }}/api/v2/import-scan/" \
-            -H "Authorization: Token ${{ secrets.DEFECTDOJO_API_TOKEN }}" \
+          curl -X POST "${{ secrets.DEFECTDOJO_PRO_URL }}/api/v2/import-scan/" \
+            -H "Authorization: Token ${{ secrets.DEFECTDOJO_PRO_API_TOKEN }}" \
             -F "product_name=${{ env.DEFECTDOJO_PRODUCT_NAME }}" \
             -F "engagement=${{ env.ENGAGEMENT_ID }}" \
             -F "scan_type=Github Vulnerability Scan" \
